2001-02-18  Eli Zaretskii  <eliz@is.elta.co.il>

	* completer.c (gdb_completer_file_name_break_characters): Remove
	slash from file-name break characters.
	[__MSDOS__]: Special definition for DOS/Windows file names.
	(line_completion_function): When completing on file names, bump
	`p' to the first file-name constituent character of `word', before
	invoking the completer.

2001-02-17  Mark Kettenis  <kettenis@gnu.org>

	* i387-nat.c: Include "i387-nat.h".  Use regnum instead of regno
	consistently for parameter names.  Fix comments accordingly.
	(i387_supply_register): New function.
	(i387_supply_fsave): Implement using i387_supply_register.
	* i387-nat.h: Use regnum instead of regno consistently for
	parameter names.  Fix comments accordingly.
	(i387_supply_register): New prototype.

2001-02-16  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* remote.c (build_remote_gdbarch_data): Use new TARGET_ADDR_BIT 
	instead of TARGET_PTR_BIT (to support Harvard architectures).

2001-02-16  Andrew Cagney  <ac131313@redhat.com>

	From 2001-02-11 Paul Hilfinger <hilfingr@lisbon.int.act-europe.fr>
	* hpux-thread.c (hpux_thread_xfer_memory): Add mem_attrib 
	argument to parameter list and to call in order to conform to 
	to_xfer_memory field of struct target_ops.

2001-02-12  Michael Chastain  <chastain@redhat.com>

	* somsolib.c (som_solib_add_solib_objfile): Do not use
	section relocation feature of syms_from_objfile.  Do my own
	section relocation, offsetting each section of the som by
	either text_addr - text_link_addr or data_start.

2001-02-16  Andrew Cagney  <ac131313@redhat.com>

	* TODO (5.1): Move ``Hardware watchpint problems'' out of 5.1.

2001-02-16  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS (paper trail): Update.

2001-02-16  Mark Kettenis  <kettenis@gnu.org>

	* target.h (target_fetch_registers): Fix comment.

2001-02-15  Andrew Cagney  <ac131313@redhat.com>

	* f-exp.y: Include <ctype.h>.
	(parse_number): Ensure that ``i'' is always initialized.
