@@ -8,7 +8,7 @@ XM_FILE= xm-go32.h
 XDEPFILES=
 
 NAT_FILE= nm-go32.h
-NATDEPFILES= go32-nat.o
+NATDEPFILES= go32-nat.o i387-nat.o
 
 TERMCAP= 
 HOST_IPC=
